# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  configuration.toml  docker-compose.test.yml  localsetup.toml  sqlx-data.json
.github/workflows/: general.yml
env/production/: docker-compose.yaml  grafana-datasources.yaml  grafana-tempo.yaml  setup  zero2prod.toml
env/test/: docker-compose.test.yaml  prometheus.yaml  setup
migrations/: 20230321124839_init.down.sql  20230321124839_init.up.sql
src/: app.rs  email_client.rs  lib.rs  main.rs  routes.rs  settings.rs  trace.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subsribe.rs
tests/: configuration.toml  health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
