[package]
name = "zero2prod"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread","time"] }
tower = "0.4.13"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.16"
hyper = { version = "0.14.23", features = ["server", "client"] }
hyper-rustls = { version = "0.23.2", default-features = false, features = ["http1", "tokio-runtime", "webpki-roots"] }
futures = { version = "0.3.25", default-features = false, features = ["std"] }
axum-macros = "0.3.6"
sqlx = { version = "0.6.2", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls","offline"] }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4"] }
once_cell = "1.17.1"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.11.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde_with = "2.3.1"
tower-http = { version = "0.4.0", features = ["trace", "request-id", "util"] }
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-opentelemetry = "0.18.0"
clap = { version = "4.0.29", default-features = false, features = ["derive", "std", "help"] }
unicode-segmentation = "1.10.1"
validator = "0.16.0"
http = "0.2.9"
humantime-serde = "1.1.1"


[dev-dependencies]
hyper = { version = "0.14.23", features = ["client"] }
claym = "0.5.1"
fake = "2.5.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tokio = { version = "1.26.0", features = ["rt", "macros"] }
wiremock = "0.5.15"
